force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Billing_Profile__c.field-meta.xml
<CustomField>
    <fullName>Billing_Profile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Metodo di pagamento</label>
    <referenceTo>BillingProfile__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>