force-app/main/default/objects/SBQQ__QuoteLine__c/fields/BillingProfile__c.field-meta.xml
<CustomField>
    <fullName>BillingProfile__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Profilo di Fatturazione</label>
    <referenceTo>BillingProfile__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>QuoteLines</relationshipName>
    <type>Lookup</type>
</CustomField>