force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CommercialId__c.field-meta.xml
<CustomField>
    <fullName>CommercialId__c</fullName>
    <label>Codice Agente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>