force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DaysNumber__c.field-meta.xml
<CustomField>
    <fullName>DaysNumber__c</fullName>
    <label>Numero di giorni</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>