force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DelayDay__c.field-meta.xml
<CustomField>
    <fullName>DelayDay__c</fullName>
    <label>Delay</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>