force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DelayDayGas__c.field-meta.xml
<CustomField>
    <fullName>DelayDayGas__c</fullName>
    <label>Delay gas</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>