force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DurationDay__c.field-meta.xml
<CustomField>
    <fullName>DurationDay__c</fullName>
    <label>Durata</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>