force-app/main/default/objects/SBQQ__QuoteLine__c/fields/DurationDayGas__c.field-meta.xml
<CustomField>
    <fullName>DurationDayGas__c</fullName>
    <label>Durata Gas (gg)</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>