force-app/main/default/objects/SBQQ__QuoteLine__c/fields/GreenCertificateIncluded__c.field-meta.xml
<CustomField>
    <fullName>GreenCertificateIncluded__c</fullName>
    <label>Certificato verde compreso</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>