force-app/main/default/objects/SBQQ__QuoteLine__c/fields/GreenEnergyOption__c.field-meta.xml
<CustomField>
    <fullName>GreenEnergyOption__c</fullName>
    <defaultValue>false</defaultValue>
    <description>per indicare se è presente(o meno) la presenza dell&apos;opzone Energia Verde per il dato record di di Product Option</description>
    <label>Opzione Energia Verde</label>
    <type>Checkbox</type>
</CustomField>