force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Index0PUN__c.field-meta.xml
<CustomField>
    <fullName>Index0PUN__c</fullName>
    <description>Indice 0 PUN (Eur/MWh)</description>
    <label>Indice 0 PUN (Eur/MWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>