force-app/main/default/objects/SBQQ__QuoteLine__c/fields/IsPresent__c.field-meta.xml
<CustomField>
    <fullName>IsPresent__c</fullName>
    <description>Indica se il prodotto associato è già esistente come subscription</description>
    <formula>IF(SBQQ__Existing__c=true, &quot;Esiste&quot;, &quot;NonEsiste&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Presente</label>
    <type>Text</type>
</CustomField>