force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MaximumPieceNumber__c.field-meta.xml
<CustomField>
    <fullName>MaximumPieceNumber__c</fullName>
    <label>Numero Massimo Pezzi</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>