force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NewClient__c.field-meta.xml
<CustomField>
    <fullName>NewClient__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se tale record di quote line è associabile ai new client</description>
    <label>Nuovo Cliente</label>
    <type>Checkbox</type>
</CustomField>