force-app/main/default/objects/SBQQ__QuoteLine__c/fields/OccupantsNumber__c.field-meta.xml
<CustomField>
    <fullName>OccupantsNumber__c</fullName>
    <description>il numero Occupanti legato al dato record di product option</description>
    <label>Numero Occupanti</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>