force-app/main/default/objects/SBQQ__QuoteLine__c/fields/OwnerAC__c.field-meta.xml
<CustomField>
    <fullName>OwnerAC__c</fullName>
    <label>Proprietario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_YesNo</valueSetName>
    </valueSet>
</CustomField>