force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PaymentMode__c.field-meta.xml
<CustomField>
    <fullName>PaymentMode__c</fullName>
    <label>Metodo di Pagamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>RID</fullName>
            </value>
            <value>
                <fullName>Bollettino postale</fullName>
            </value>
            <value>
                <fullName>Rate</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Bollettino</fullName>
                <isActive>false</isActive>
                <label>Bollettino</label>
            </value>
            <value>
                <fullName>BollettinoPostale</fullName>
                <isActive>false</isActive>
                <label>BollettinoPostale</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>