force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Percentage__c.field-meta.xml
<CustomField>
    <fullName>Percentage__c</fullName>
    <label>Percentuale</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>