force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PercentagePick__c.field-meta.xml
<CustomField>
    <fullName>PercentagePick__c</fullName>
    <description>Percentuale di consumo su fascia F0 al picco.</description>
    <label>Percentuale F0 Picco</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>