force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PODCode__c.field-meta.xml
<CustomField>
    <fullName>PODCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>il codice POD associato al dato record di product option</description>
    <label>Codice POD</label>
    <referenceTo>SaleServiceItem__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>