force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PriceF1__c.field-meta.xml
<CustomField>
    <fullName>PriceF1__c</fullName>
    <label>Prezzo F1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>