force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PriceFedFixed__c.field-meta.xml
<CustomField>
    <fullName>PriceFedFixed__c</fullName>
    <description>Il Prezzo fisso FED</description>
    <label>Prezzo fed fisso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>