force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PriceFP__c.field-meta.xml
<CustomField>
    <fullName>PriceFP__c</fullName>
    <description>Price Fuori Picco From Product</description>
    <formula>SBQQ__Product__r.PricePick__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prezzo FP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>