force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PriceFV__c.field-meta.xml
<CustomField>
    <fullName>PriceFV__c</fullName>
    <formula>SBQQ__Product__r.PricePickOut__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prezzo FV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>