force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PriceGreenOption__c.field-meta.xml
<CustomField>
    <fullName>PriceGreenOption__c</fullName>
    <label>Prezzo Opzione verde</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>