force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PricePick__c.field-meta.xml
<CustomField>
    <fullName>PricePick__c</fullName>
    <description>Prezzo al picco dell&apos;energia</description>
    <label>Prezzo Picco</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>