force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PriceRidFixed__c.field-meta.xml
<CustomField>
    <fullName>PriceRidFixed__c</fullName>
    <label>Premio rid fisso</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>