force-app/main/default/objects/SBQQ__QuoteLine__c/fields/PrintOnBill__c.field-meta.xml
<CustomField>
    <fullName>PrintOnBill__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stampa in fattura</label>
    <type>Checkbox</type>
</CustomField>