force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Image__c.field-meta.xml
<CustomField>
    <fullName>Product_Image__c</fullName>
    <formula>SBQQ__Product__r.Product_Image__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Immagine prodotto</label>
    <type>Text</type>
</CustomField>