force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SendingBillMode__c.field-meta.xml
<CustomField>
    <fullName>SendingBillMode__c</fullName>
    <label>Modalita Invio Bolletta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_BillSendingMode</valueSetName>
    </valueSet>
</CustomField>