force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SerQFQV__c.field-meta.xml
<CustomField>
    <fullName>SerQFQV__c</fullName>
    <label>Ser. QF/QV</label>
    <length>50</length>
    <type>Text</type>
</CustomField>