force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Servizio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Commodity</valueSetName>
    </valueSet>
</CustomField>