force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ServicePointLinkItem__c.field-meta.xml
<CustomField>
    <fullName>ServicePointLinkItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Punto Fornitura</label>
    <referenceTo>SaleServiceItem__c</referenceTo>
    <relationshipLabel>Quote Lines (Punto Fornitura)</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>