force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SignDate__c.field-meta.xml
<CustomField>
    <fullName>SignDate__c</fullName>
    <label>Data Firma</label>
    <type>Date</type>
</CustomField>