force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SupplyCity__c.field-meta.xml
<CustomField>
    <fullName>SupplyCity__c</fullName>
    <description>Campo di configurazione usato per indicare i comuni per il record di criterio nella funzionalità di Configurazione Offerta Tecnica</description>
    <label>Comune Fornitura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>