force-app/main/default/objects/SBQQ__QuoteLine__c/fields/VASBillingMode__c.field-meta.xml
<CustomField>
    <fullName>VASBillingMode__c</fullName>
    <label>Modalità di fatturazione VAS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_BillingModeVAS</valueSetName>
    </valueSet>
</CustomField>