force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Versione</label>
    <length>10</length>
    <type>Text</type>
</CustomField>