force-app/main/default/objects/SBQQ__QuoteLine__c/fields/WaitingPeriod__c.field-meta.xml
<CustomField>
    <fullName>WaitingPeriod__c</fullName>
    <description>Indica un periodo di carenza</description>
    <label>Periodo di carenza</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>