force-app/main/default/objects/SBQQ__QuoteLine__c/recordTypes/HDT_RT_CompositionVASproductsnotbillable.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_CompositionVASproductsnotbillable</fullName>
    <active>true</active>
    <description>Composizione VAS prodotti non fatturabili</description>
    <label>HDT RT Composizione VAS prodotti non fatturabili</label>
</RecordType>