force-app/main/default/objects/SBQQ__QuoteLine__c/recordTypes/HDT_RT_SectionBonusforGasservice.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_SectionBonusforGasservice</fullName>
    <active>true</active>
    <description>Sezione Bonus per servizio Gas</description>
    <label>HDT RT Sezione Bonus per servizio Gas</label>
</RecordType>