force-app/main/default/objects/SBQQ__QuoteLine__c/recordTypes/HDT_RT_SectionContributesforGasservice.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_SectionContributesforGasservice</fullName>
    <active>true</active>
    <description>Sezione Contributi per servizio Gas</description>
    <label>HDT RT Sezione Contributi per servizio Gas</label>
</RecordType>