force-app/main/default/objects/SBQQ__QuoteLine__c/recordTypes/HDT_RT_VASConsumptionanalysis.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_VASConsumptionanalysis</fullName>
    <active>true</active>
    <description>Analisi consumi</description>
    <label>HDT RT VAS Analisi consumi</label>
</RecordType>