force-app/main/default/objects/SBQQ__QuoteLine__c/recordTypes/HDT_RT_VASServicesnotbillable.recordType-meta.xml
<RecordType>
    <fullName>HDT_RT_VASServicesnotbillable</fullName>
    <active>true</active>
    <description>Servizi non fatturabili</description>
    <label>HDT RT VAS Servizi non fatturabili</label>
</RecordType>